# Text2SQL_Agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
k8s/: configmap.yaml  deployment.yaml  service.yaml
mlflow/: Dockerfile  docker-compose.yml
postgres/: docker-compose.yml
postgres/init/: 001_create_schema.sql  002_seed_data.sql
scripts/: deploy.sh  watch-deploy.sh
src/text2sql_agent/: config.py
src/text2sql_agent/agent/: graph.py  models.py  prompts.py  tools.py
src/text2sql_agent/api/: main.py
src/text2sql_agent/database/: postgres_adapter.py
streamlit/: docker-compose.yml  dockerfile  streamlit_app.py
