[project]
name = "text2sql-agent"
version = "0.1.0"
description = "Agent Text-to-SQL e-commerce exposé en API — agent déployable sur la Model Platform"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.53",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "langchain>=1.3.4",
    "mlflow>=3.13.0",
    "psycopg>=3.3.4",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1.0"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["text2sql_agent*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
